# rubric-grading-engine

./: .env.ci  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  CHANGELOG.md  CONTRIBUTING.md  DEMO.md  README.md  SECURITY.md  docker-compose.demo.yml  docker-compose.yml  railway.toml
.github/: CODEOWNERS  (+2 more)
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  dependencies.py  exceptions.py  logging_config.py  main.py  middleware.py  skill_normalization_config.json
backend/app/db/: __init__.py  session.py
backend/app/llm/: __init__.py  client.py  parsers.py
backend/app/models/: __init__.py  assignment.py  audit_log.py  base.py  class_.py  class_enrollment.py  comment_bank.py  contact.py  dpa_request.py  essay.py  grade.py  instruction_recommendation.py  integrity_report.py  intervention_recommendation.py  media_comment.py  regrade_request.py  revision_comparison.py  rubric.py  student.py  student_group.py  student_skill_profile.py  user.py  worklist.py
backend/app/routers/: account.py  assignments.py  auth.py  classes.py  comment_bank.py  contact.py  copilot.py  essays.py  exports.py  grades.py  health.py  integrity.py  internal.py  intervention.py  media_comments.py  onboarding.py  recommendations.py  regrade_requests.py  rubric_templates.py  rubrics.py  students.py  worklist.py
backend/app/schemas/: account.py  assignment.py  auth.py  batch_grading.py  class_.py  class_insights.py  comment_bank.py  contact.py  copilot.py  dpa.py  essay.py  export.py  grade.py  instruction_recommendation.py  integrity.py  intervention.py  media_comment.py  onboarding.py  regrade_request.py  roster_import.py  rubric.py  student.py  student_group.py  worklist.py
backend/app/services/: assignment.py  auth.py  auto_grouping.py  batch_grading.py  class_.py  class_insights.py  comment_bank.py  composition_timeline.py  contact.py  copilot.py  csv_export.py  dpa.py  embedding.py  essay.py  export.py  grade.py  grading.py  grading_progress.py  instruction_recommendation.py  integrity.py  intervention_agent.py  media_comment.py  onboarding.py  regrade_request.py  resubmission.py  roster_import.py  rubric.py  rubric_template.py  skill_normalization.py  student.py  student_matching.py  student_skill_profile.py  worklist.py
backend/app/storage/: __init__.py  s3.py
backend/app/tasks/: auto_grouping.py  celery_app.py  debug.py  email.py  embedding.py  export.py  grading.py  intervention.py  monitor.py  skill_profile.py  worklist.py
backend/scripts/: seed_demo_data.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  test_comment_bank.py  test_copilot.py  test_instruction_recommendations.py  test_integrity.py  test_interventions.py  test_m6_tenant_isolation.py  test_m7_tenant_isolation.py  test_media_comments.py  test_migration_roundtrip.py  test_regrade_requests.py  test_resubmission.py  test_rls_policy_enforcement.py  test_s3.py
backend/tests/unit/: test_account_router.py  test_assignment_service.py  test_assignments_router.py  test_auth_router.py  test_auth_router_login.py  test_auth_service.py  test_auth_service_jwt.py  test_auto_grouping_api.py  test_auto_grouping_task.py  test_batch_grading_router.py  test_batch_grading_service.py  test_browser_compose.py  test_celery_app.py  test_class_insights_router.py  test_class_insights_service.py  test_classes_router.py  test_comment_bank_router.py  test_comment_bank_service.py  test_composition_timeline.py  test_config.py  test_contact_router.py  test_copilot_router.py  test_copilot_service.py  test_core_models.py  test_csv_export_service.py  test_dependencies.py  test_dpa_router.py  test_email_tasks.py  test_embedding_task.py  test_essay_service.py  test_essays_router.py  test_export_task.py  test_grade_service.py  test_grading_progress.py  test_grading_service.py  test_grading_task.py  test_instruction_recommendation_router.py  test_instruction_recommendation_service.py  test_integrity_report_model.py  test_integrity_router.py  (+35 more)
(+314 files in other folders)
