[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rubric-grading-engine"
version = "0.1.0"
description = "AI-assisted rubric grading engine — backend API and Celery workers"
requires-python = ">=3.12"

dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pgvector>=0.3.0",

    # Config
    "pydantic>=2.7.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    "email-validator>=2.1.0",

    # Auth
    "pyjwt>=2.8.0",
    "bcrypt>=4.1.0",
    "python-multipart>=0.0.9",

    # Task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",

    # File handling
    "boto3>=1.34.0",
    "python-magic>=0.4.27",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",

    # LLM
    "openai>=1.30.0",

    # Utilities
    "httpx>=0.27.0",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "pytest-xdist>=3.5.0",
    "httpx>=0.27.0",           # async test client for FastAPI
    "testcontainers[postgres,redis]>=4.4.0",
    "faker>=25.0.0",
    "factory-boy>=3.3.0",
    "freezegun>=1.5.0",

    # Linting / formatting / type checking
    "ruff>=0.4.0",
    "mypy>=1.10.0",

    # Type stubs
    "types-python-dateutil",
    "types-redis",
    "boto3-stubs[s3]",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long — handled by formatter
    "B008",  # do not perform function calls in argument defaults (FastAPI pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
files = ["app"]
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = false

# SQLAlchemy async typing requires this
plugins = ["sqlalchemy.ext.mypy.plugin"]

[[tool.mypy.overrides]]
module = [
    "pdfplumber.*",
    "magic.*",
    "celery.*",
    "testcontainers.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: fast unit tests with no external dependencies",
    "integration: integration tests that require PostgreSQL and Redis",
    "e2e: end-to-end tests (run separately via Playwright)",
]
addopts = [
    "--strict-markers",
    "-ra",
]

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["app"]
omit = [
    "app/db/migrations/*",
    "tests/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = false

# Stricter coverage for the LLM parser — fully deterministic logic
[tool.coverage.paths]
parsers = ["app/llm/parsers.py"]
